--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
 
 [dependencies]
-# openstack = { git = "https://github.com/dtantsur/rust-openstack" }
-openstack = { path = "G:\\Dropbox\\school+\\Code\\Git\\rust-openstack" }
+openstack = { git = "https://github.com/dtantsur/rust-openstack" }
 serde = "*"
 serde_json = "*"
 argparse = "*"
