--- a/data/commands.yaml
+++ b/data/commands.yaml
@@ -3,30 +3,36 @@ show:
     - get
   help: shows the given resource.
   requires_id: true
+  has_body: false
 list:
   aliases:
     - ls
   help: lists the given resource.
   requires_id: false
+  has_body: false
 new:
   aliases:
     - create
   help: create a new item from the given resource.
   requires_id: false
+  has_body: true
 delete:
   aliases:
     - remove
     - rm
   help: delete an item from the given resource.
   requires_id: true
+  has_body: false
 patch:
   aliases:
     - update
   help: update an item from the given resource.
   requires_id: true
+  has_body: true
 add:
   aliases:
     - put
     - append
   help: add a propety from an item from the given resource.
   requires_id: true
+  has_body: true
