--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openstack-client"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["thomas9911 <thomastimmer11@hotmail.com>"]
 
 [dependencies]
@@ -18,4 +18,5 @@ clap = {version = "*", features = ["yaml"]}
 structopt = "0.2"
 heck = "*"
 yaml-rust = "*"
+uuid = {version = "0.7", features = ["serde", "v4"]}
 # structopt-derive = "*"
