--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ os:
 language: rust
 rust:
   - stable
-  - beta
   - nightly
 matrix:
   allow_failures:
@@ -15,3 +14,8 @@ cache: cargo
 script:
   - cargo build --verbose
   - cargo test --verbose
+deploy:
+  provider: s3
+  endpoint: $AWS_ENDPOINT
+  skip_cleanup: true
+  bucket: $AWS_BUCKET
