--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 os:
   - linux
-  - osx
-  - windows
+  # - osx
+  # - windows
 language: rust
 rust:
   - stable
-  - nightly
+  # - nightly
 matrix:
   allow_failures:
     - rust: nightly
