--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ deploy:
   skip_cleanup: true
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
-  bucket: $AWS_BUCKET
+  # bucket: $AWS_BUCKET
   region: ams
   on:
     all_branches: true
+
+    #/home/travis/build/thomas9911/openstack-client/target
