--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
   - cargo test --release --verbose
   # - echo $OS_USERNAME
 deploy:
+  skip_cleanup: true
   provider: script
   script: ls && pwd && ls /home/travis/build/thomas9911/openstack-client/target/release
   # script: /home/travis/build/thomas9911/openstack-client/target/release/openstack-client upload object --file /home/travis/build/thomas9911/openstack-client/target/release/openstack-client --name openstack-client --container rustci
